@@ -43,6 +43,11 @@ Change getfacl long options from --all to --access and from --dir to
 </para></listitem>
 
 <listitem><para>
+Don't raise a SIGSYS signal in the XSI IPC functions if cygserver is not
+running.  Just return -1 with errno set to ENOSYS.
+</para></listitem>
+
+<listitem><para>
 New APIs: cabsl, cimagl, creall, finitel, hypotl, sqrtl.
 </para></listitem>
 
